--- a/api/package.json
+++ b/api/package.json
@@ -8,10 +8,12 @@
 		"dev": "nodemon src/server.ts"
 	},
 	"dependencies": {
+		"cors": "^2.8.5",
 		"express": "^4.18.1"
 	},
 	"devDependencies": {
 		"@tsconfig/node16": "1.0.2",
+		"@types/cors": "^2.8.12",
 		"@types/express": "^4.17.14",
 		"nodemon": "^2.0.20",
 		"ts-node": "^10.9.1",
